# idsov-concept

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json
dnas/zome_functions/workdir/: dna.yaml
dnas/zome_functions/zomes/coordinator/tdd_zome/: Cargo.toml
dnas/zome_functions/zomes/coordinator/tdd_zome/src/: all_health_records.rs  health_record.rs  lib.rs
dnas/zome_functions/zomes/integrity/tdd_zome/: Cargo.toml
dnas/zome_functions/zomes/integrity/tdd_zome/src/: health_record.rs  lib.rs
tests/: package.json
tests/src/zome_functions/tdd_zome/: all-health-records.test.ts  common.ts  health-record.test.ts
ui/: package.json
ui/src/: App.svelte
ui/src/zome_functions/tdd_zome/: AllHealthRecords.svelte  CreateHealthRecord.svelte  EditHealthRecord.svelte  HealthRecordDetail.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
