[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "=0.3.8"
hdk = "=0.2.8"
serde = "=1.0.166"

[workspace.dependencies.tdd_zome]
path = "dnas/zome_functions/zomes/coordinator/tdd_zome"

[workspace.dependencies.tdd_zome_integrity]
path = "dnas/zome_functions/zomes/integrity/tdd_zome"
